# review

./: .gitignore  CMakeLists.txt  README  README.md  review.pro
CLI/: DiffFormat.h
CLI/Impl/: DiffFormat.cpp
CMakeModules/: CodeCoverage.cmake
Git/: AnnotatedDiff.h  AnnotatedDiffLine.h  Blame.h  BlameHunk.h  Common.h  Diff.h  DiffDelta.h  Object.h  Repo.h  Signature.h  Tree.h
Git/Impl/: AnnotatedDiff.cpp  AnnotatedDiffLine.cpp  Blame.cpp  BlameHunk.cpp  Common.cpp  Common.inl  Diff.cpp  DiffDelta.cpp  DiffLine.cpp  DiffOptions.cpp  Object.cpp  Repo.cpp  Signature.cpp  Tree.cpp
Review/Impl/: CliMain.cpp  MainWindow.cpp  main.cpp
Test/: Sample.txt
UI/: MainWindow.ui
Utils/: Callback.h  Utils.h
Utils/Impl/: Utils.inl
components/: .clang-format
components/CLI/: CMakeLists.txt
components/CLI/include/: DiffFormat.h
components/CLI/src/: DiffFormat.cpp
components/Cli/: CMakeLists.txt
components/Cli/include/Cli/: DiffFormat.h  Option.h  OptionFormatter.h  Options.h
components/Cli/src/: DiffFormat.cpp  Option.cpp  OptionFormatter.cpp  Options.cpp
components/Git/: CMakeLists.txt
components/Git/cmake/: FindLibGit2.cmake
components/Git/include/: Common.h  Common.inl  DiffOptions.h
components/Git/include/Git/: AnnotatedDiff.h  AnnotatedDiffDelta.h  AnnotatedDiffLine.h  Blame.h  BlameHunk.h  Commit.h  Common.h  Common.inl  Diff.h  DiffDelta.h  DiffFile.h  DiffLine.h  Object.h  Repo.h  Signature.h
components/Git/src/: AnnotatedDiff.cpp  AnnotatedDiffDelta.cpp  AnnotatedDiffLine.cpp  Blame.cpp  BlameHunk.cpp  Commit.cpp  Common.cpp  Diff.cpp  DiffDelta.cpp  DiffFile.cpp  DiffLine.cpp  DiffOptions.cpp  Object.cpp  Repo.cpp  Signature.cpp  Tree.cpp
components/Review/: CMakeLists.txt
components/Review/include/: DiffModel.h  FileTreeItem.h  FileTreeModel.h  Review.h  ReviewHandler.h
components/Review/include/Review/: Application.h  Commit.h  DiffDelta.h  DiffLine.h  DiffModel.h  DiffView.h  FileDiff.h  FileTreeItem.h  FileTreeModel.h  Review.h
components/Review/src/: Application.cpp  CliMain.cpp  Commit.cpp  DiffDelta.cpp  DiffLine.cpp  DiffModel.cpp  DiffView.cpp  FileTreeItem.cpp  FileTreeModel.cpp  Review.cpp  ReviewHandler.cpp  main.cpp
components/Tests/: CMakeLists.txt
components/Tests/include/Tests/: CliTest.h  ReviewTest.h  Utils.h  UtilsTest.h
components/Tests/src/: CliTest.cpp  ReviewTest.cpp  Utils.cpp  UtilsTest.cpp  main.cpp
components/Ui/: CMakeLists.txt  resources.qrc
components/Ui/qml/: DeltaView.qml  LineView.qml  main.qml
components/Utils/: CMakeLists.txt
components/Utils/include/: Utils.h  Utils.inl
components/Utils/include/Utils/: Callback.h  Utils.h  Utils.inl
components/Utils/src/: Utils.cpp
test/: Sample.txt
